2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* test-partial.c: New test suite for gmime-message-partial.c.

	* gmime-stream-cat.c: Several fixes.
	(g_mime_stream_cat_class_init): Overload the seek method.

	* gmime-stream-mmap.c (g_mime_stream_mmap_class_init): Overload
	the seek method.

	* gmime-stream-buffer.c (g_mime_stream_buffer_class_init):
	Overload the seek method.

	* gmime-stream-null.c (g_mime_stream_null_class_init): Overload
	the seek method.

	* gmime-stream-filter.c (g_mime_stream_filter_class_init):
	Overload the seek method.

	* gmime-stream.c (g_mime_stream_class_init): Overload the seek
	method.

	* gmime-stream-mem.c (g_mime_stream_mem_class_init): Overload the
	seek method.

	* gmime-stream-file.c (g_mime_stream_file_class_init): Overload
	the seek method.
	(stream_length): The length of the stream is bound_end -
	bound_start.

	* gmime-stream-fs.c (g_mime_stream_fs_class_init): Overload the
	seek method.
	(stream_length): The length of the stream is bound_end -
	bound_start.

2002-05-10  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_reset): Use stream_seek().
	(stream_read): Seek to position before starting our read, this is
	to protect against one of our source streams being read while we
	weren't looking and/or a substream related to our cat stream.
	(stream_write): Same.

2002-05-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message-partial.c: New class to handle MIME parts with a
	content-type of message/partial.

	* gmime.c (g_mime_init): Register the message/partial class.

	* gmime-object.c (g_mime_object_new_type): If we fail to find an
	appropriate mime object class, try falling back to the */*
	handler. Only if that fails do we return NULL.

2002-05-08  Jeffrey Stedfast  <fejj@ximian.com>

	* Makefile.am: Added gmime-stream-cat.c to the build.

	* gmime-stream-cat.c: New stream that acts similar to the Unix
	`cat` command by concatenating multiple streams.
