@@ -1,5 +1,10 @@
 2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime-message-partial.c (partial_compare): Fixed to work
+	properly.
+
+2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>
+
 	* test-partial.c: New test suite for gmime-message-partial.c.
 
 	* gmime-stream-cat.c: Several fixes.
